Fix image z-index when read more is on

--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,7 @@ body {
   top: calc(50% + 15vh);
   width: 50vw;
   max-width: 250px;
-  left: 5vw;
+  left: 2vw;
   height: 5vw;
   max-height: 50px;
   min-height: 50px;
@@ -126,9 +126,13 @@ body {
   font-size: 1.25em;
   color: #c64675;
   font-family: Calibri;
+  z-index: 250;
 }
 .read-more-btn:hover {
   background-color: #ff89b433;
+}
+.read-more-btn:hover {
+  background-color: rgba(255, 255, 255, 0.8);
 }
 svg {
   z-index: 99;
