--- a/src/Intro/Title/title.css
+++ b/src/Intro/Title/title.css
@@ -4,7 +4,7 @@
   max-height: 98vw;
 }
 .title-cont svg path {
-  stroke-width: 7px;
+  stroke-width: 5px;
   stroke: rgb(199, 71, 120);
 }
 
