--- a/src/cloud.css
+++ b/src/cloud.css
@@ -1,5 +1,5 @@
 .cloud-container {
-  z-index: 1;
+  /* z-index: 1; */
   position: absolute;
   width: 100%;
   height: 100%;
@@ -15,9 +15,12 @@
 .cloud-container .cloud-project,
 .cloud-container .cloud-about {
   opacity: 0.5;
+  z-index: 1;
+
 }
 .cloud-container .cloud-read-more {
-  opacity: 0.8;
+  opacity: 0.85;
+  z-index: 200;
 }
 .cloud-intro {
   width: 0%;
